force-app/main/default/objects/Application_Asset_Liability__c/Application_Asset_Liability__c.object-meta.xml
<CustomObject>
    <label>Applicant Asset/Liability</label>
    <nameField>
        <displayFormat>AAL-{0000000000}</displayFormat>
        <label>Application Assets</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Assets//Liabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>