force-app/main/default/objects/Application_Asset_Liability__c/fields/Account_Balance_After__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance_After__c</fullName>
    <label>Account Balance After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>