force-app/main/default/objects/Application_Asset_Liability__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipName>Application_Assets_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>