force-app/main/default/objects/Application_Asset_Liability__c/fields/Asset_Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Asset_Credit_Balance__c</fullName>
    <description>Credit Card or Line of Credit Liability</description>
    <label>Asset Credit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>