force-app/main/default/objects/Application_Asset_Liability__c/fields/Asset_Credit_Limit_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Credit_Limit_Number__c</fullName>
    <label>Asset Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>