force-app/main/default/objects/Application_Asset_Liability__c/fields/Assets_and_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Assets_and_Liabilities__c</fullName>
    <label>Assets and Liabilities</label>
    <referenceTo>FinServ__AssetsAndLiabilities__c</referenceTo>
    <relationshipName>Application_Assets_Liabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>