force-app/main/default/objects/Application_Asset_Liability__c/fields/Average_Monthly_Usage_Number__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Usage_Number__c</fullName>
    <label>Average Balance (6-12 months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>