force-app/main/default/objects/Application_Asset_Liability__c/fields/Cash_Value_After__c.field-meta.xml
<CustomField>
    <fullName>Cash_Value_After__c</fullName>
    <label>Cash Value After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>