force-app/main/default/objects/Application_Asset_Liability__c/fields/Financial_Institution_Text__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial Institution</label>
    <length>25</length>
    <type>Text</type>
</CustomField>