force-app/main/default/objects/Application_Asset_Liability__c/fields/Lien_on_Asset__c.field-meta.xml
<CustomField>
    <fullName>Lien_on_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lien on Asset</label>
    <type>Checkbox</type>
</CustomField>