force-app/main/default/objects/Application_Asset_Liability__c/fields/Lien_on_Asset_List__c.field-meta.xml
<CustomField>
    <fullName>Lien_on_Asset_List__c</fullName>
    <label>Lien on Asset?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>