force-app/main/default/objects/Application_Asset_Liability__c/fields/Life_Insurance_Cash_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Cash_Value_Number__c</fullName>
    <label>Life Insurance (Cash Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>