force-app/main/default/objects/Application_Asset_Liability__c/fields/Loan_Balance_After__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance_After__c</fullName>
    <description>Loan_Balance__c from assets and liability</description>
    <label>Loan Balance After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>