force-app/main/default/objects/Application_Asset_Liability__c/fields/Loan_Balance_After_Calc_App_Portion__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance_After_Calc_App_Portion__c</fullName>
    <formula
  >Assets_and_Liabilities__r.Percent_Ownership__c *  Loan_Balance_After__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Balance After Calc App Portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>