force-app/main/default/objects/Application_Asset_Liability__c/fields/Loan_Balance_Prior_Calc_App_Portion__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance_Prior_Calc_App_Portion__c</fullName>
    <description>Applicant Portion of the Loan Balance Prior to the Loan -
Percent Applicant Portion x Loan Balance Prior</description>
    <formula>Assets_and_Liabilities__r.Percent_Ownership__c *  Loan_Balance_Prior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Balance Prior Calc App Portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>