force-app/main/default/objects/Application_Asset_Liability__c/fields/Loan_Repaid_From_Facility__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repaid_From_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Repaid From Facility</label>
    <type>Checkbox</type>
</CustomField>