force-app/main/default/objects/Application_Asset_Liability__c/fields/Minimum_Payment_After__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Payment_After__c</fullName>
    <description>CC and LOC Liabilities</description>
    <label>Minimum Payment After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>