force-app/main/default/objects/Application_Asset_Liability__c/fields/Minimum_Payment_After_Calc__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Payment_After_Calc__c</fullName>
    <formula
  >$CustomMetadata.JN_Defaults__mdt.Default.Average_Balance_Minimum_Pay_Number__c * 
IF(
OR(
ISPICKVAL(Treatment_of_Credit_LOC_list__c, &quot;Repay Facility&quot;),
ISPICKVAL(Treatment_of_Credit_LOC_list__c, &quot;Will Remain&quot;)),
Assets_and_Liabilities__r.Average_Monthly_Usage__c,
IF(
(ISPICKVAL(Treatment_of_Credit_LOC_list__c, &quot;Close Facility&quot;)),0,
IF(ISNULL(Assets_and_Liabilities__r.Average_Monthly_Usage__c),0,Assets_and_Liabilities__r.Average_Monthly_Usage__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Payment After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>