force-app/main/default/objects/Application_Asset_Liability__c/fields/Minimum_Payment_Calc__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Payment_Calc__c</fullName>
    <formula
  >$CustomMetadata.JN_Defaults__mdt.Default.Average_Balance_Minimum_Pay_Number__c *  IF (ISNULL(Assets_and_Liabilities__r.Average_Monthly_Usage__c),0,Assets_and_Liabilities__r.Average_Monthly_Usage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>