force-app/main/default/objects/Application_Asset_Liability__c/fields/Monthly_Contribution_Before_Loan__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Contribution_Before_Loan__c</fullName>
    <description>Pension as an Asset</description>
    <label>Monthly Contribution Before Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>