force-app/main/default/objects/Application_Asset_Liability__c/fields/Monthly_Payment_After__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_After__c</fullName>
    <description>Property, Vehicle, Other Asset, Other Loan
This field maps to Monthly_payment__c from assets and liabilities object</description>
    <label>Monthly Payment After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>