force-app/main/default/objects/Application_Asset_Liability__c/fields/Monthly_Payment_After_Calc_App_Portion__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_After_Calc_App_Portion__c</fullName>
    <description>Applicant Portion of the Monthly Payment After to the Loan -
Percent Applicant Portion x Monthly Payment After</description>
    <formula
  >Assets_and_Liabilities__r.Percent_Applicant_Portion__c *  Monthly_Payment_After__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Applicant Portion of the Monthly Payment After to the Loan -
Percent Applicant Portion x Monthly Payment After</inlineHelpText>
    <label>Monthly Payment After Calc App Portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>