force-app/main/default/objects/Application_Asset_Liability__c/fields/Monthly_Payment_Prior__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Prior__c</fullName>
    <description>Property, Vehicle, Other Asset, Other Loan</description>
    <label>Monthly Payment Prior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>