force-app/main/default/objects/Application_Asset_Liability__c/fields/Monthly_Payment_Prior_Calc_App_Portion__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Prior_Calc_App_Portion__c</fullName>
    <description>Applicant Portion of the Loan Balance prior to the Loan - 
Percent Applicant Portion x Loan Balance Prior</description>
    <formula>Assets_and_Liabilities__r.Percent_Applicant_Portion__c *   Monthly_Payment_Prior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Applicant Portion of the Loan Balance prior to the Loan - 
Percent Applicant Portion x Loan Balance Prior</inlineHelpText>
    <label>Monthly Payment Prior Calc App Portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>