force-app/main/default/objects/Application_Asset_Liability__c/fields/Overdraft_Balance_Number__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Balance_Number__c</fullName>
    <label>Overdraft Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>