force-app/main/default/objects/Application_Asset_Liability__c/fields/Overdraft_Limit_Number__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Limit_Number__c</fullName>
    <label>Overdraft Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>