force-app/main/default/objects/Application_Asset_Liability__c/fields/Percentage_Applicant_s_Portion_Number__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Applicant_s_Portion_Number__c</fullName>
    <label>Percentage Applicant&apos;s Portion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>