force-app/main/default/objects/Application_Asset_Liability__c/fields/Total_Contributions_to_Date_After__c.field-meta.xml
<CustomField>
    <fullName>Total_Contributions_to_Date_After__c</fullName>
    <label>Total Contributions to Date After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>