force-app/main/default/objects/Application_Asset_Liability__c/fields/Total_Market_Value_After__c.field-meta.xml
<CustomField>
    <fullName>Total_Market_Value_After__c</fullName>
    <label>Total Market Value After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>