force-app/main/default/objects/Application_Asset_Liability__c/fields/Total_Pension_Contributions_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Total_Pension_Contributions_Numbers__c</fullName>
    <label>Total Pension Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>