force-app/main/default/objects/Application_Asset_Liability__c/fields/Total_Savings_Investments_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Savings_Investments_Number__c</fullName>
    <label>Total Savings/Investments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>