force-app/main/default/objects/Application_Asset_Liability__c/fields/Treatment_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>Treatment_of_Credit__c</fullName>
    <label>Treatment of Credit</label>
    <picklist>
        <picklistValues>
            <fullName>Repay</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Close</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Will Remain</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>