force-app/main/default/objects/Application_Asset_Liability__c/fields/Treatment_of_Credit_LOC_list__c.field-meta.xml
<CustomField>
    <fullName>Treatment_of_Credit_LOC_list__c</fullName>
    <label>Treatment of Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will Remain</fullName>
            </value>
            <value>
                <fullName>Repay Facility</fullName>
            </value>
            <value>
                <fullName>Close Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>