force-app/main/default/objects/Application_Asset_Liability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Application__c</columns>
    <columns>Treatment_of_Credit__c</columns>
    <columns>Loan_Repaid_From_Facility__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>